compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test4-4.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 196
expression: "\ntype User { User(id: Int, name: String, age: Int) }\nfn create_user(user_id) { User(age: 22, id: user_id, name: \"\") }\n                    "
---
-module(the_app).
-compile(no_auto_import).

-export_type([user/0]).

-type user() :: {user, integer(), binary(), integer()}.

-spec create_user(integer()) -> user().
create_user(User_id) ->
    {user, User_id, <<""/utf8>>, 22}.

