compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test4.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 179
expression: "pub external fn go(x: Int, y: Int) -> Int = \"m\" \"f\"\n                    fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }"
---
-module(the_app).
-compile(no_auto_import).

-export([go/2]).

-spec go(integer(), integer()) -> integer().
go(A, B) ->
    m:f(A, B).

-spec x() -> integer().
x() ->
    m:f(1, 2),
    m:f(4, 3).

