compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test5-4.snap
---
source: compiler-core/src/erlang/tests.rs
assertion_line: 223
expression: "\npub fn go(a) {\n  let a = 1\n  a\n}\n\n                    "
---
-module(the_app).
-compile(no_auto_import).

-export([go/1]).

-spec go(any()) -> integer().
go(A) ->
    A@1 = 1,
    A@1.

