compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test9.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub type Pair(x, y) { Pair(x: x, y: y) } pub fn x() { Pair(1, 2) Pair(3., 4.) }"
---
----- SOURCE CODE
pub type Pair(x, y) { Pair(x: x, y: y) } pub fn x() { Pair(1, 2) Pair(3., 4.) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([x/0]).
-export_type([pair/2]).

-type pair(I, J) :: {pair, I, J}.

-spec x() -> pair(float(), float()).
x() ->
    {pair, 1, 2},
    {pair, 3.0, 4.0}.
