compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__keyword_constructors-2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub type X { Fun(Int) }"

---
-module(the_app).
-compile(no_auto_import).

-export_type([x/0]).

-type x() :: {'fun', integer()}.



